--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,10 @@
   "dependencies": {
     "jquery": "~2.1.1",
     "underscore": "~1.7.0",
-    "react": "~0.12.0"
+    "react": "~0.12.0",
+    "angular": "~1.2.5"
+  },
+  "resolutions": {
+    "angular": "~1.2.5"
   }
 }
